updated layout,cart and navigation menu

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>ShopZone</title>
+    <title>1800Store</title>
     <link
       href="https://api.fontshare.com/v2/css?f[]=plein@401,300,700,501,500,701,900,901,400,301&display=swap"
       rel="stylesheet"
